<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_exercise_edit_24px"
        android:orderInCategory="101"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_24px"
        android:orderInCategory="102"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_date_range_24px"
        android:orderInCategory="103"
        android:title="@string/action_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tools"
        android:icon="@drawable/ic_icons8_toolbox"
        android:orderInCategory="104"
        android:title="@string/action_tools"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>