<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:gravity="center_vertical">


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/set_label"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:text="@string/weight_label"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/reps_label"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>



</LinearLayout>