<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingStart="@dimen/list_margin"
        android:paddingBottom="@dimen/list_margin"
        android:text="@string/target_header"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingStart="@dimen/list_margin"
                android:paddingBottom="@dimen/list_margin"
                android:text="@string/weight_label"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingStart="@dimen/list_margin"
                android:paddingBottom="@dimen/list_margin"
                android:text="@string/reps_label"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingStart="@dimen/list_margin"
                android:paddingBottom="@dimen/list_margin"
                android:text="@string/max_label"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingStart="@dimen/list_margin"
                android:paddingBottom="@dimen/list_margin"
                android:text="@string/min_label"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/list_margin"
                android:paddingBottom="@dimen/list_margin"
                android:text="@string/max_label"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/list_margin"
                android:paddingBottom="@dimen/list_margin"
                android:text="@string/min_label"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

