<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBodyDark"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="start"
        android:padding="@dimen/default_margin"
        android:text="@string/history_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="14sp"
        android:text="@string/start_label"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/startEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="start"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/startLabel"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageButton
        android:id="@+id/startDateButton"
        style="@style/buttonIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:contentDescription="@string/start_date_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="@id/startEditText"
        app:srcCompat="@drawable/ic_date_range_24px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="14sp"
        android:text="@string/end_label"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startEditText" />

    <EditText
        android:id="@+id/endEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="start"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/startEditText"
        app:layout_constraintTop_toBottomOf="@+id/startEditText" />

    <ImageButton
        android:id="@+id/endDateButton"
        style="@style/buttonIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:contentDescription="@string/end_date_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateButton"
        app:layout_constraintBottom_toBottomOf="@id/endEditText"
        app:srcCompat="@drawable/ic_date_range_24px" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_search_24px"
        android:padding="@dimen/default_margin"
        android:text="@string/search_history"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endEditText" />


    <Space
        android:id="@+id/space_vertical"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_button" />


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".Views.ExerciseActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHistoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>